# bench-recruiter-agent

./: .gitattributes  .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  openapi.json  pyproject.toml
backend/alembic/: README  README.md  env.py
backend/alembic/versions/: 12c80bf0e060_add_candidate_title_and_primary_skills.py  161a7bd63439_initial_schema.py  62800661e14c_add_candidate_status.py  b1d2e3f40512_rename_recruiter_to_users.py  e3546d70251d_add_invitation_table.py
backend/src/callup/: config.py  main.py  openapi_export.py  secrets.py
backend/src/callup/api/: deps.py  permissions.py  schemas.py
backend/src/callup/api/routes/: candidates.py  invitations.py  me.py  members.py  orgs.py
backend/src/callup/auth/: admin.py  jwt.py
backend/src/callup/db/: base.py  enums.py  models.py  repositories.py  session.py
backend/src/callup/llm/: client.py  embeddings.py
backend/src/callup/services/: membership.py  storage.py
backend/src/callup/workers/: queue.py  scheduler.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_openapi_export.py
backend/tests/api/: test_candidates.py  test_invitations.py  test_me.py  test_members.py  test_orgs.py  test_permissions.py
backend/tests/auth/: test_admin.py  test_jwt.py
backend/tests/db/: test_candidates_repo.py  test_invitations_repo.py  test_members_repo.py  test_models.py  test_repositories.py
backend/tests/services/: test_membership.py  test_storage.py
backend/tests/services/candidates/: test_roster.py
docs/: Process Flow.drawio  (+5 more)
(+112 files in other folders)
