[project]
name = "callup"
version = "0.1.0"
description = "Callup backend — FastAPI service and workers for bench-sales recruiting automation."
readme = "README.md"
authors = [
    { name = "nikhil-chigali", email = "nikhil.chigali@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.111.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
callup = "callup.main:run"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires live external services (LLM, DB, browser); excluded from the fast suite.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]  # generated migrations

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]
